<resources>
    <string name="app_name">Cocinapp</string>
    <string name="welcome">Bienvenidos</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="button_login">Ingresar</string>
    <string name="button_forgotpass">Recuperar contraseña</string>
    <string name="forgot_password">Olvido su contraseña?</string>
    <string name="password_recovery">Ingrese su correo para una nueva contraseña</string>
    <string name="send">Enviar</string>
    <string name="search_ingredient">Ingredientes</string>
    <string name="search_recipe">Buscar receta</string>
    <string name="ingredient">ingrediente</string>
    <string name="home">Recetas</string>
    <string name="ratings">Valoraciones</string>
    <string name="dashboard">Bienvenido Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_recipe">Subir Receta</string>
    <string name="edit_user">Actualizar mis datos</string>
    <string name="log_out">Cerrar sesion</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="gender">Genero</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="mail">Correo eléctronico</string>
    <string name="admin_mnu">Menu de Admin</string>
    <string name="add_recipe">Agregar una Receta</string>
    <string name="preparation">Preparacion</string>
    <string name="time">Tiempo (En minutos)</string>
    <string name="ingredients">Ingredientes</string>
    <string name="celiac">Celiaco</string>
    <string name="diabetic">Diabetico</string>
    <string name="vegan">Vegano</string>
    <string name="vegetarian">Vegetariano</string>
    <string name="add">Agregar</string>
</resources>
