<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_dashboard">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="105dp"
            android:layout_height="55dp"
            android:autoSizeTextType="uniform"
            android:id="@+id/tvWelcomeUser"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:layout_marginBottom="105dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/upload_recipe"
            android:id="@+id/btnUpreceta"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/edit_user"
            android:id="@+id/btnEditData"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/admin_mnu"
            android:id="@+id/btnAdminOpc"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/log_out"
            android:layout_marginTop="35dp"
            android:id="@+id/btnLogOut"
            />

    </LinearLayout>

</FrameLayout>