<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_user">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="55dp"
            android:autoSizeTextType="uniform"
            android:text="@string/register"
            android:textAlignment="center"
        />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etBirthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:hint="@string/birthDate"
            android:inputType="date"
            android:layout_marginBottom="5dp"/>


        <Spinner
            android:id="@+id/spnGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:layout_marginBottom="25dp"
            android:id="@+id/btnRegister_User"/>
    </LinearLayout>

</FrameLayout>