<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buscaIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="430dp"
                android:layout_height="54dp"
                app:layout_constraintTop_toBottomOf="@+id/buscaIngredientes"
                tools:ignore="MissingConstraints,UnknownId"
                tools:layout_editor_absoluteX="-19dp">

                <EditText
                    android:id="@+id/ingrediente1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_ingredient"
                    android:inputType="text"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="130dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buscarReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_recipe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>